[tool.poetry]
name = "HypEx"
version = "0.1.1-1"
description = "Fast and customizable framework for Causal Inference"
authors = [
    "Dmitry Tikhomirov <dimasta00@gmail.com>",
    "Dmitry Bulychev <dmatryus.sqrt49@yandex.ru>",
    "Ksenia Vasilieva <vasilievaxeniaa@gmail.com>"
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/sb-ai-lab/HypEx"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">=3.8, <3.13"
tqdm = '*'
scikit-learn = "*"


pandas = [
    { version = ">=1.3.5, <=2.0.3", python = "<3.9" },
    { version = ">=1.3.5, <=2.2.1", python = ">=3.9" }
]

numpy = [
    { version = ">=1.17.0, <=1.24.4", python = "<3.9" },
    { version = ">=1.17.0, <=1.26.4", python = ">=3.9" }
]

scipy = [
    { version = ">=1.5.0, <=1.10.1", python = "<3.9" },
    { version = ">=1.5.0, <=1.12.0", python = ">=3.9, <3.11" }
]

matplotlib = [
    { version = ">=3.0.0, <=3.7.3", python = "<3.9" },
    { version = ">=3.0.0, <=3.8.3", python = ">=3.9, <3.11" }]

faiss-cpu = ">=1.6.0, <=1.8.0"

seaborn = "<=0.13.2"

statsmodels = "<=0.14.1"

[tool.poetry.extras]
cat = ["catboost"]
lgbm = ["lightgbm"]
all = ["catboost", "lightgbm"]

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.3"

sphinx = { version = "^7.2.6", python = ">=3.9, <3.11" }
nbsphinx = "*"
nbsphinx_link = "*"
sphinx_autodoc_typehints = "*"
sphinx_rtd_theme = "^1.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"